--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
            
 		     	$.each(data, function (index, item) {
 			    	var eachrow = "<tr>"
-			                 + "<td>" + item.bike_id + "</td>"
-			                 + "<td>" + item.manufacturer + "</td>"
-			                 + "<td>" + item.model + "</td>"
+			                 + "<th>" + item.bike_id + "</th>"
+			                 + "<th>" + item.manufacturer + "</th>"
+			                 + "<th>" + item.model + "</th>"
 			                 + "</tr>";
 			    	$('#tbody').append(eachrow);
 				});
